@@ -151,7 +151,9 @@ class tx_oelib_MapperRegistry_testcase extends tx_phpunit_testcase {
 	 * @test
 	 */
 	public function getWithActivatedTestingModeReturnsMapperWithTestingLayer() {
-		tx_oelib_MapperRegistry::getInstance()->activateTestingMode();
+		tx_oelib_MapperRegistry::getInstance()->activateTestingMode(
+			new tx_oelib_testingFramework('tx_oelib')
+		);
 
 		$this->assertTrue(
 			tx_oelib_MapperRegistry::get('tx_oelib_tests_fixtures_TestingMapper')
@@ -163,7 +165,9 @@ class tx_oelib_MapperRegistry_testcase extends tx_phpunit_testcase {
 	 * @test
 	 */
 	public function getAfterInstanceWithActivatedTestingModeWasPurgedReturnsMapperWithoutTestingLayer() {
-		tx_oelib_MapperRegistry::getInstance()->activateTestingMode();
+		tx_oelib_MapperRegistry::getInstance()->activateTestingMode(
+			new tx_oelib_testingFramework('tx_oelib')
+		);
 		tx_oelib_MapperRegistry::purgeInstance();
 
 		$this->assertFalse(
